--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <meta-data android:name="com.google.android.geo.API_KEY"
-               android:value="AIzaSyBHTIP2dof4GXU04JakIRYo-Szr8RlReLk"/>
+               android:value="API-KEY-HERE"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
